@@ -1,15 +1,23 @@
-import java.io.IOException;
+import java.io.*;
+import java.util.*;
 
 public class AmazonVendor implements IVendor{
-    public String search(String url) {
-        String cmd = "python search.py";
+    public Map<String, String> search(String url) {
+        String cmd = "python searchAmazon.py";
+        Map<String, String> dict = new HashMap<>();
         try {
-            Process p = Runtime.getRuntime().exec(cmd);
+            ProcessBuilder pb = new ProcessBuilder("python", "searchAmazon.py");
+            Process p = pb.start();
+            BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            String ret = in.readLine();
+            dict.put("Title", ret);
+            ret = in.readLine();
+            dict.put("Price", ret);
+            in.close();
         }
         catch(IOException ex){
             System.out.println(ex);
         }
-        System.out.println();
-        return null;
+        return dict;
     }
 }
